--- a/index.html
+++ b/index.html
@@ -16,24 +16,20 @@
 }
 *{box-sizing:border-box;margin:0;padding:0}
 body{font-family:'Inter',sans-serif;background:var(--bg);color:#111;line-height:1.6}
-
 header{position:fixed;top:0;width:100%;background:var(--accent2);padding:16px 0;z-index:1000;box-shadow:0 4px 12px var(--shadow)}
 .container{max-width:1200px;margin:0 auto;padding:0 24px}
 .tabs{display:flex;gap:12px;flex-wrap:wrap;overflow-x:auto;-webkit-overflow-scrolling:touch}
 .tab{padding:10px 16px;border-radius:12px;background:transparent;border:1px solid transparent;cursor:pointer;font-weight:600;transition:0.3s;font-family:'Playfair Display', serif;flex:0 0 auto;}
 .tab.active{background:var(--accent);color:#fff;box-shadow:0 6px 18px var(--shadow)}
-
 .hero{display:flex;flex-wrap:wrap;gap:24px;align-items:center;justify-content:center;padding:140px 24px 60px 24px;background:linear-gradient(rgba(183,107,163,0.4), rgba(107,179,183,0.4)), url('assets/images/hero-bg.jpg') no-repeat center/cover;text-align:center;color:#fff}
 .hero h1{font-family:'Playfair Display', serif;font-size:clamp(32px,6vw,60px);margin-bottom:16px}
 .hero p{font-size:clamp(16px,2.5vw,20px);margin-bottom:24px}
 .cta{display:inline-block;padding:clamp(10px,2vw,16px) clamp(20px,4vw,28px);border-radius:24px;background:linear-gradient(135deg,var(--accent),var(--accent2));color:#fff;text-decoration:none;font-weight:700;transition:0.3s}
 .cta:hover{opacity:0.85;transform:translateY(-3px)}
-
 section{padding:60px 0}
 section:nth-of-type(even){background:var(--accent2);color:#fff}
 h2,h3{font-family:'Playfair Display', serif;margin-bottom:24px}
 section:nth-of-type(even) h2, section:nth-of-type(even) h3{color:#fff}
-
 .grid{display:grid;gap:24px}
 .grid.cols-3{grid-template-columns:repeat(auto-fit,minmax(250px,1fr))}
 .card{background:var(--card);border-radius:16px;padding:20px;border:1px solid #eee;box-shadow:0 4px 20px var(--shadow);transition:0.3s;opacity:0;transform:translateY(20px);max-width:350px;margin:0 auto}
@@ -57,8 +53,8 @@ textarea{min-height:140px}
 .review-card{background:var(--card);padding:20px;border-radius:16px;border:1px solid #eee;box-shadow:0 4px 16px var(--shadow);margin-bottom:16px;transition:0.3s;opacity:0;transform:translateY(20px);max-width:350px;margin:0 auto}
 .review-card.visible{opacity:1;transform:translateY(0);transition:all 0.6s ease-out}
 .review-card:hover{transform:translateY(-3px);box-shadow:0 8px 20px var(--shadow)}
-footer{border-top:2px solid var(--accent);padding:40px 0;background:var(--accent2);color:#fff;display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap}
-.social-links a{color:#fff;margin-left:12px;text-decoration:none;font-weight:600;transition:0.3s}
+footer{border-top:2px solid var(--accent);padding:40px 0;background:var(--accent2);color:#fff;display:flex;justify-content:center;align-items:center;flex-direction:column;gap:12px;flex-wrap:wrap}
+.social-links a{color:#fff;margin:0 12px;text-decoration:none;font-weight:600;transition:0.3s}
 .social-links a:hover{opacity:0.8;transform:scale(1.05)}
 @media(max-width:900px){.hero{flex-direction:column;text-align:center;padding-top:120px}.grid.cols-3{grid-template-columns:1fr}.tabs{overflow-x:auto}}
 </style>
@@ -68,10 +64,7 @@ footer{border-top:2px solid var(--accent);padding:40px 0;background:var(--accent
 <div class="container" style="display:flex;align-items:center;justify-content:space-between">
 <div style="display:flex;gap:14px;align-items:center">
 <img src="assets/images/logo.png" alt="Logo Bélli et Bien-être" style="border-radius:12px;width:60px">
-<div>
-<strong style="font-size:1.2rem">Bélli et Bien-être</strong><br>
-<small>Cosmétiques naturels & soins premium</small>
-</div></div>
+<div><strong style="font-size:1.2rem">Bélli et Bien-être</strong><br><small>Cosmétiques naturels & soins premium</small></div></div>
 <nav class="tabs" role="tablist" aria-label="Navigation principale">
 <button class="tab active" data-tab="accueil" role="tab" aria-selected="true">Accueil</button>
 <button class="tab" data-tab="produits" role="tab" aria-selected="false">Produits</button>
@@ -81,10 +74,54 @@ footer{border-top:2px solid var(--accent);padding:40px 0;background:var(--accent
 </div>
 </header>
 <main class="container">
-<!-- Accueil, Produits, Beauté et Contact avec bandes alternées, cartes animées et responsive -->
+<section id="accueil" class="tab-panel">
+<div class="hero">
+<h1>Bienvenue chez Bélli et Bien-être</h1>
+<p>Des cosmétiques naturels pour révéler votre beauté authentique.</p>
+<a href="#produits" class="cta" onclick="document.querySelector('[data-tab=\'produits\']').click()">Découvrir nos produits</a>
+</div>
+<div class="reviews">
+<h2>Avis de nos clients</h2>
+<div class="review-card"><strong>Marie D.</strong><p style="color:var(--muted)">"Les produits ont transformé ma peau. Je recommande !"</p></div>
+<div class="review-card"><strong>Lucas T.</strong><p style="color:var(--muted)">"Service rapide et produits excellents."</p></div>
+</div>
+</section>
+<section id="produits" class="tab-panel" hidden>
+<h2>Nos produits</h2>
+<h3>Soin du visage</h3>
+<div class="grid cols-3">
+<article class="card"><img src="assets/images/produit1.jpg" alt="Sérum Éclat"><div class="product-info"><div class="product-title">Sérum Éclat</div><div class="product-desc">Un sérum concentré pour illuminer le teint et hydrater la peau en profondeur.</div><div class="price">29,90 €</div><a class="btn-buy" href="#">Acheter</a></div></article>
+<article class="card"><img src="assets/images/produit2.jpg" alt="Crème de Jour"><div class="product-info"><div class="product-title">Crème de Jour Réparatrice</div><div class="product-desc">Crème légère pour nourrir et protéger votre peau tout au long de la journée.</div><div class="price">24,50 €</div><a class="btn-buy" href="#">Acheter</a></div></article>
+</div>
+<h3>Soins du corps</h3>
+<div class="grid cols-3">
+<article class="card"><img src="assets/images/produit3.jpg" alt="Masque Nuit"><div class="product-info"><div class="product-title">Masque Nuit Régénérant</div><div class="product-desc">Régénère et apaise votre peau pendant votre sommeil.</div><div class="price">34,00 €</div><a class="btn-buy" href="#">Acheter</a></div></article>
+<article class="card"><img src="assets/images/produit4.jpg" alt="Huile visage"><div class="product-info"><div class="product-title">Huile Visage Nourrissante</div><div class="product-desc">Hydrate et apporte de l'éclat grâce à un mélange d'huiles naturelles.</div><div class="price">27,00 €</div><a class="btn-buy" href="#">Acheter</a></div></article>
+</div>
+<h3>Accessoires & Parfums</h3>
+<div class="grid cols-3">
+<article class="card"><img src="assets/images/produit5.jpg" alt="Brume visage"><div class="product-info"><div class="product-title">Brume Hydratante</div><div class="product-desc">Légère brume pour rafraîchir et hydrater la peau à tout moment.</div><div class="price">15,90 €</div><a class="btn-buy" href="#">Acheter</a></div></article>
+<article class="card"><img src="assets/images/produit6.jpg" alt="Crème Nuit"><div class="product-info"><div class="product-title">Crème Nuit Confort</div><div class="product-desc">Crème riche pour nourrir et régénérer la peau pendant la nuit.</div><div class="price">31,50 €</div><a class="btn-buy" href="#">Acheter</a></div></article>
+</div>
+</section>
+<section id="beauté" class="tab-panel" hidden>
+<h2>Beauté & Conseil</h2>
+<h3>Routine Matinale</h3><p style="color:var(--muted)">Préparer et protéger votre peau pour la journée.</p>
+<h3>Routine du Soir</h3><p style="color:var(--muted)">Astuces pour régénérer et apaiser votre peau le soir.</p>
+<h3>Astuce Bien-être</h3><p style="color:var(--muted)">Conseils pour prendre soin de vous et détendre votre peau.</p>
+</section>
+<section id="contact" class="tab-panel" hidden>
+<h2>Contactez-nous</h2>
+<form action="https://formspree.io/f/xzzqbpld" method="POST">
+<input type="text" name="name" placeholder="Votre nom" required>
+<input type="email" name="email" placeholder="Votre e-mail" required>
+<textarea name="message" placeholder="Votre message" required></textarea>
+<button type="submit" class="btn-send">Envoyer le message</button>
+</form>
+</section>
 </main>
 <footer>
-<div class="container" style="display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap">
+<div class="container" style="display:flex;flex-direction:column;align-items:center;gap:12px">
 <div>© <strong>Bélli et Bien-être</strong> — Tous droits réservés</div>
 <div class="social-links">Suivez-nous:
 <a href="#" target="_blank">Facebook</a>
