--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ header{position:fixed;top:0;width:100%;background:var(--accent2);padding:16px 0;
 .tabs{display:flex;gap:12px;flex-wrap:wrap;overflow-x:auto;-webkit-overflow-scrolling:touch}
 .tab{padding:10px 16px;border-radius:12px;background:transparent;border:1px solid transparent;cursor:pointer;font-weight:600;transition:0.3s;font-family:'Playfair Display', serif;flex:0 0 auto;white-space:nowrap}
 .tab.active{background:var(--accent);color:#fff;box-shadow:0 6px 18px var(--shadow)}
-.hero{display:flex;flex-wrap:wrap;gap:24px;align-items:center;justify-content:center;padding:140px 24px 60px 24px;background:linear-gradient(rgba(183,107,163,0.4), rgba(107,179,183,0.4)), url('assets/images/hero-bg.jpg') no-repeat center/cover;text-align:center;color:#fff}
-.hero h1{font-family:'Playfair Display', serif;font-size:clamp(28px,6vw,60px);margin-bottom:16px}
-.hero p{font-size:clamp(16px,2.5vw,20px);margin-bottom:24px}
+.hero{display:flex;flex-wrap:wrap;gap:24px;align-items:center;justify-content:center;padding:80px 24px 40px 24px;background:linear-gradient(rgba(183,107,163,0.4), rgba(107,179,183,0.4)), url('assets/images/hero-bg.jpg') no-repeat center/cover;text-align:center;color:#fff}
+.hero h1{font-family:'Playfair Display', serif;font-size:clamp(28px,6vw,48px);margin-bottom:16px}
+.hero p{font-size:clamp(16px,2.5vw,18px);margin-bottom:24px}
 .cta{display:inline-block;padding:clamp(10px,2vw,16px) clamp(20px,4vw,28px);border-radius:24px;background:linear-gradient(135deg,var(--accent),var(--accent2));color:#fff;text-decoration:none;font-weight:700;transition:0.3s}
 .cta:hover{opacity:0.85;transform:translateY(-3px)}
 section{padding:60px 0}
@@ -56,7 +56,7 @@ textarea{min-height:140px}
 footer{border-top:2px solid var(--accent);padding:40px 24px;background:var(--accent2);color:#fff;display:flex;justify-content:center;align-items:center;flex-direction:column;gap:12px;flex-wrap:wrap}
 .social-links a{color:#fff;margin:0 12px;text-decoration:none;font-weight:600;transition:0.3s}
 .social-links a:hover{opacity:0.8;transform:scale(1.05)}
-@media(max-width:900px){.hero{flex-direction:column;text-align:center;padding-top:120px}.grid.cols-3{grid-template-columns:1fr}.tabs{flex-direction:column;gap:8px;overflow-x:visible}}
+@media(max-width:900px){.hero{flex-direction:column;text-align:center;padding-top:100px}.grid.cols-3{grid-template-columns:1fr}.tabs{flex-direction:column;gap:8px;overflow-x:visible}}
 </style>
 </head>
 <body>
@@ -75,10 +75,23 @@ footer{border-top:2px solid var(--accent);padding:40px 24px;background:var(--acc
 <section id="accueil" class="tab-panel">
 <div class="hero">
 <h1>Bienvenue chez Bélli et Bien-être</h1>
-<p>Des cosmétiques naturels pour révéler votre beauté authentique.</p>
-<a href="#produits" class="cta" onclick="document.querySelector('[data-tab=\'produits\']').click()">Découvrir nos produits</a>
-</div>
-<div class="reviews">
+ <p>Nous créons des cosmétiques riches en ingrédients naturels, testés dermatologiquement, pour révéler l'éclat naturel de votre peau.</p>
+          <a href="#produits" class="cta" onclick="document.querySelector('[data-tab=\'produits\']').click()">Découvrir nos produits</a>
+        </div>
+        <div class="right" style="flex:1;min-width:280px">
+          <div style="background:#fff;padding:20px;border-radius:16px;border:1px solid #f0eaf3">
+            <strong>Notre promesse</strong>
+            <p style="margin-top:12px;color:var(--muted)">Formules propres, tests cliniques, emballages recyclables.</p>
+          </div>
+        </div>
+      </div>
+      <div style="margin-top:36px">
+        <h2>Vidéo de présentation</h2>
+        <div class="video-wrap">
+          <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Vidéo Éclat Beauté" allowfullscreen loading="lazy"></iframe>
+        </div>
+      </div>
+      <div class="reviews">
 <h2>Avis de nos clients</h2>
 <div class="review-card"><strong>Marie D.</strong><p style="color:var(--muted)">"Les produits ont transformé ma peau. Je recommande !"</p></div>
 <div class="review-card"><strong>Lucas T.</strong><p style="color:var(--muted)">"Service rapide et produits excellents."</p></div>
@@ -86,7 +99,53 @@ footer{border-top:2px solid var(--accent);padding:40px 24px;background:var(--acc
 </section>
 <section id="produits" class="tab-panel" hidden>
 <h2>Nos produits</h2>
-<!-- produits ici -->
+<h3 style="margin-top:20px;color:var(--accent)">Soin du visage</h3>
+      <div class="grid cols-3" style="margin-top:12px">
+        <article class="card">
+          <img src="assets/images/produit1.jpg" alt="Sérum Éclat" loading="lazy">
+          <div class="product-info"><div class="product-title">Sérum Éclat</div><div class="product-desc">Sérum léger pour un teint lumineux et hydraté.</div><div class="price">29,90 €</div><a class="btn-buy" href="https://buy.example.com/produit1" target="_blank">Acheter</a></div>
+        </article>
+        <article class="card">
+          <img src="assets/images/produit2.jpg" alt="Crème de Jour" loading="lazy">
+          <div class="product-info"><div class="product-title">Crème de Jour Réparatrice</div><div class="product-desc">Hydrate et protège la peau toute la journée.</div><div class="price">24,50 €</div><a class="btn-buy" href="https://buy.example.com/produit2" target="_blank">Acheter</a></div>
+        </article>
+         <article class="card">
+          <img src="assets/images/produit2.jpg" alt="Crème de Jour" loading="lazy">
+          <div class="product-info"><div class="product-title">Crème de Jour Réparatrice</div><div class="product-desc">Hydrate et protège la peau toute la journée.</div><div class="price">24,50 €</div><a class="btn-buy" href="https://buy.example.com/produit2" target="_blank">Acheter</a></div>
+        </article>
+      </div>
+
+      <h3 style="margin-top:20px;color:var(--accent)">Soins du corps</h3>
+      <div class="grid cols-3" style="margin-top:12px">
+        <article class="card">
+          <img src="assets/images/produit3.jpg" alt="Masque Nuit" loading="lazy">
+          <div class="product-info"><div class="product-title">Masque Nuit Régénérant</div><div class="product-desc">Régénère la peau pendant votre sommeil.</div><div class="price">34,00 €</div><a class="btn-buy" href="https://buy.example.com/produit3" target="_blank">Acheter</a></div>
+        </article>
+         <article class="card">
+          <img src="assets/images/produit3.jpg" alt="Masque Nuit" loading="lazy">
+          <div class="product-info"><div class="product-title">Masque Nuit Régénérant</div><div class="product-desc">Régénère la peau pendant votre sommeil.</div><div class="price">34,00 €</div><a class="btn-buy" href="https://buy.example.com/produit3" target="_blank">Acheter</a></div>
+        </article>
+        <article class="card">
+          <img src="assets/images/produit4.jpg" alt="Huile visage" loading="lazy">
+          <div class="product-info"><div class="product-title">Huile Visage Nourrissante</div><div class="product-desc">Nourrit et adoucit la peau en profondeur.</div><div class="price">27,00 €</div><a class="btn-buy" href="https://buy.example.com/produit4" target="_blank">Acheter</a></div>
+        </article>
+      </div>
+
+      <h3 style="margin-top:20px;color:var(--accent)">Accessoires & parfums</h3>
+      <div class="grid cols-3" style="margin-top:12px">
+        <article class="card">
+          <img src="assets/images/produit5.jpg" alt="Brume visage" loading="lazy">
+          <div class="product-info"><div class="product-title">Brume Hydratante</div><div class="product-desc">Rafraîchit et hydrate instantanément.</div><div class="price">15,90 €</div><a class="btn-buy" href="https://buy.example.com/produit5" target="_blank">Acheter</a></div>
+        </article>
+          <article class="card">
+          <img src="assets/images/produit5.jpg" alt="Brume visage" loading="lazy">
+          <div class="product-info"><div class="product-title">Brume Hydratante</div><div class="product-desc">Rafraîchit et hydrate instantanément.</div><div class="price">15,90 €</div><a class="btn-buy" href="https://buy.example.com/produit5" target="_blank">Acheter</a></div>
+        </article>
+        <article class="card">
+          <img src="assets/images/produit6.jpg" alt="Crème nuit" loading="lazy">
+          <div class="product-info"><div class="product-title">Crème Nuit Confort</div><div class="product-desc">Régénère et nourrit intensément pendant la nuit.</div><div class="price">31,50 €</div><a class="btn-buy" href="https://buy.example.com/produit6" target="_blank">Acheter</a></div>
+        </article>
+      </div>
 </section>
 <section id="beauté" class="tab-panel" hidden>
 <h2>Beauté & Conseil</h2>
@@ -125,8 +184,6 @@ panels.forEach(p=>p.hidden=p.id!==id);
 })});
 const observer=new IntersectionObserver((entries)=>{entries.forEach(entry=>{if(entry.isIntersecting){entry.target.classList.add('visible')}});},{threshold:0.1});
 document.querySelectorAll('.card, .review-card').forEach(el=>observer.observe(el));
-
-// Scroll horizontal pour onglets sur mobile
 const tabContainer = document.getElementById('main-tabs');
 tabContainer.addEventListener('touchstart', e => {
   let touchstartX = e.touches[0].clientX;
