--- a/index.html
+++ b/index.html
@@ -81,17 +81,17 @@ footer{border-top:2px solid var(--accent);padding:40px 24px;background:var(--acc
 <section id="accueil" class="tab-panel">
 <div class="hero">
 <h1>Bienvenue chez Bélli et Bien-être</h1>
- <p>Nous créons des cosmétiques riches en ingrédients naturels, testés dermatologiquement, pour révéler l'éclat naturel de votre peau.</p>
+<p>Nous créons des cosmétiques riches en ingrédients naturels, testés dermatologiquement, pour révéler l'éclat naturel de votre peau.</p>
           <a href="#produits" class="cta" onclick="document.querySelector('[data-tab=\'produits\']').click()">Découvrir nos produits</a>
         </div>
-        <div class="right" style="flex:1;min-width:280px">
-          <div style="background:#fff;padding:20px;border-radius:16px;border:1px solid #f0eaf3">
+        <div class="right" style="flex:1;min-width:260px">
+          <div style="background:linear-gradient(180deg,#fff,#fff);padding:16px;border-radius:12px;border:1px solid #000">
             <strong>Notre promesse</strong>
-            <p style="margin-top:12px;color:var(--muted)">Formules propres, tests cliniques, emballages recyclables.</p>
+            <p style="margin:8px 0 0;color:var(--muted)">Formules propres, tests cliniques, emballages recyclables.</p>
           </div>
         </div>
       </div>
-      <div style="margin-top:36px">
+      <div style="margin-top:8px">
         <h2>Vidéo de présentation</h2>
         <div class="video-wrap">
           <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Vidéo Éclat Beauté" allowfullscreen loading="lazy"></iframe>
