--- a/index.html
+++ b/index.html
@@ -182,15 +182,16 @@
     <p style="color:var(--muted)">Découvrez nos conseils pour prendre soin de votre peau.</p>
   </section>
 
-  <!-- CONTACT -->
-  <section id="contact" class="tab-panel" hidden>
-    <h2>Contactez-nous</h2>
-    <form action="https://formspree.io/f/xzzqbpld" method="POST">
-      <input type="text" name="name" placeholder="Votre nom" required>
-      <input type="email" name="email" placeholder="Votre e-mail" required>
-      <textarea name="message" placeholder="Votre message" required></textarea>
-      <button type="submit" class="btn-send">Envoyer le message</button>
-    </form>
+<!-- CONTACT -->
+<section id="contact" class="tab-panel" hidden>
+<h2>Contactez-nous</h2>
+<h3 style="text-align:center; margin-bottom:20px; color:var(--accent)">Envoyez-nous un message</h3>
+<form action="https://formspree.io/f/xzzqbpld" method="POST">
+<input type="text" name="name" placeholder="Votre nom" required>
+<input type="email" name="email" placeholder="Votre e-mail" required>
+<textarea name="message" placeholder="Votre message" required></textarea>
+<button type="submit" class="btn-send">Envoyer le message</button>
+</form>
   </section>
 </main>
 
